# ompl_planner

./: collision.cpp  collision.hpp  cute_c2.h  meson.build  ompl.cpp  pathserver.proto  plantest.json
proto/: pathserver.proto
